--- a/main/templates/signin.html
+++ b/main/templates/signin.html
@@ -38,7 +38,13 @@
       <div class="row justify-content-center">
         <button type="submit" form="signin-form" class="btn btn-dark btn-signin">Sign In</button>
       </div>
+      <div class="row my-2">
+        <div class="col signup-prompt">
+          Not a part of yet? <span class="signup"> <a href="/signup/">Sign Up!</a></span>
+        </div>
+      </div>
     </div>
+
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
