--- a/main/static/css/signup.css
+++ b/main/static/css/signup.css
@@ -3,16 +3,12 @@ body {
   min-height: 100vh;
 }
 
-body #logo {
-  margin: 4rem auto 0 auto;
-}
-
 body input {
   margin: 0.5rem 0;
   text-align: center;
 }
 
-body .btn-signin {
+body .btn-signup {
   background-color: white;
   color: black;
   font-weight: 500;
@@ -22,7 +18,7 @@ body .form-control {
   border-radius: 5px;
 }
 
-body .signup-prompt {
+body .signin-prompt {
   text-align: center;
   color: white;
   font-weight: 500;
@@ -32,7 +28,30 @@ body a:hover {
   text-decoration: none;
 }
 
+body .signup {
+  padding: 7rem 0 0 0;
+}
+
+body #tc {
+  color: #03bd03;
+  font-weight: 500;
+  text-align: center;
+}
+
+body .google_auth {
+  background-color: white;
+  border-radius: 15px;
+  padding: 0.4rem 2rem;
+  width: 100%;
+}
+
+body h3 {
+  padding: 1rem;
+  font-weight: 600;
+  color: white;
+}
+
 .row {
   margin: auto;
 }
-/*# sourceMappingURL=signin.css.map */
+/*# sourceMappingURL=signup.css.map */
