--- a/main/templates/signin.html
+++ b/main/templates/signin.html
@@ -33,6 +33,7 @@
               name="username"
               id="username"
               placeholder="Username"
+              required
             />
           </div>
         </div>
@@ -44,6 +45,7 @@
               name="password"
               id="password"
               placeholder="Password"
+              required
             />
           </div>
         </div>
