--- a/main/templates/album.html
+++ b/main/templates/album.html
@@ -12,11 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'css/home.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" />
-    <link
-      rel="stylesheet"
-      href="{% static 'css/owl.theme.default.min.css' %}"
-    />
+    <link rel="stylesheet" href="{% static 'css/album.css' %}" />
   </head>
   <link
     href="https://fonts.googleapis.com/css?family=Sarala&display=swap"
@@ -33,7 +29,7 @@
             id="logo"
           />
         </div>
-        <div class="row" id='home-row'>
+        <div class="row" id="home-row">
           <h3 id="home">Home</h3>
         </div>
         <div class="row">
@@ -49,10 +45,10 @@
         <div class="row link-hover">Albums</div>
       </div>
 
-      <div class="col-9 offset-3 ">
+      <div class="col-9 offset-3">
         <div class="row">
           <div class="col-12 search-bar px-0">
-            <form action="" method="POST" class="form-group" id='search'>
+            <form action="" method="POST" class="form-group" id="search">
               {% csrf_token %}
               <div class="input-group">
                 <div class="input-group-addon">
@@ -63,7 +59,7 @@
                   name="phrase"
                   placeholder="Search for Songs, Artists or Albums"
                   class="pt-3 search_input"
-                  id = "search_input"
+                  id="search_input"
                 />
               </div>
             </form>
@@ -72,84 +68,70 @@
         <div class="row">
           <div class="col-12 content-container">
             <div id="content">
-              <h2 class="pb-3">Recently added</h2>
-              <div class="owl-carousel owl-theme" id="recently_added"></div>
-              <h2 class="pb-3">Our Charts</h2>
-              <div class="owl-carousel owl-theme" id="charts">
-                <div class="myxo_card">
-                  <div class="art">
-                    <img src="/static/assets/top_10.png" alt="" srcset="" />
-                  </div>
-                  <p class="album_name">Myxo Top 10</p>
+              <div class="row" id="album_meta">
+                <div class="col-3">
+                  <img
+                    src="/static/assets/artist/taylor_swift/red.jpg"
+                    alt=""
+                    id="album_art"
+                  />
                 </div>
-                <div class="myxo_card">
-                  <div class="art">
-                    <img src="/static/assets/rock_hits.png" alt="" srcset="" />
-                  </div>
-                  <p class="album_name">Rock Hits</p>
+                <div class="col-6">
+                  <h2 id="album_title">Red</h2>
+                  <h3 id="artist_name">Taylor Swift</h3>
+                  <h4 id="misc_data">12 Songs - 48 mins</h4>
+                  <h4 id="genre">Pop</h4>
+                  <h4 id="year">2015</h4>
                 </div>
-                <div class="myxo_card">
-                  <div class="art">
-                    <img src="/static/assets/pop_hits.png" alt="" srcset="" />
+              </div>
+              <div id="songs_container">
+                <div class="song">
+                  <div class="row">
+                    <div class="col-1">
+                      <img src="/static/assets/player-icons/play_playlist.png" alt="" srcset="" class="play_button">
+                    </div>
+                    <div class="col-9">
+                      <p class="song_name">I Knew You Were Trouble</p>
+                    </div>
+                    <div class="col-1">
+                      <p class="song_duration">3:39</p>
+                    </div>
+                    <div class="col-1">
+                      <img src="/static/assets/player-icons/song_menu.png" alt="" srcset="" class="song_menu">
+                    </div>
                   </div>
-                  <p class="album_name">Pop Hits</p>
                 </div>
-                <div class="myxo_card">
-                  <div class="art">
-                    <img
-                      src="/static/assets/best_of_linkin_park.jpg"
-                      alt=""
-                      srcset=""
-                    />
+                <div class="song">
+                  <div class="row">
+                    <div class="col-1">
+                      <img src="/static/assets/player-icons/play_playlist.png" alt="" srcset="" class="play_button">
+                    </div>
+                    <div class="col-9">
+                      <p class="song_name">We Are Never Ever Getting Back Together</p>
+                    </div>
+                    <div class="col-1">
+                      <p class="song_duration">3:13</p>
+                    </div>
+                    <div class="col-1">
+                      <img src="/static/assets/player-icons/song_menu.png" alt="" srcset="" class="song_menu">
+                    </div>
                   </div>
-                  <p class="album_name">Best of Linkin Park</p>
-                </div>
-                <div class="myxo_card">
-                  <div class="art">
-                    <img
-                      src="/static/assets/best_of_katy_perry.jpg"
-                      alt=""
-                      srcset=""
-                    />
-                  </div>
-                  <p class="album_name">Best of Katy Perry</p>
-                </div>
-                <div class="myxo_card">
-                  <div class="art">
-                    <img
-                      src="/static/assets/best_of_taylor_swift.jpg"
-                      alt=""
-                      srcset=""
-                    />
-                  </div>
-                  <p class="album_name">Best of Taylor Swift</p>
-                  <div class="art">
-                </div>
-                <div class="myxo_card">
-                    <img
-                      src="/static/assets/best_of_coldplay.jpg"
-                      alt=""
-                      srcset=""
-                    />
-                  </div>
-                  <p class="album_name">Best of Coldplay</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      </div>
     </div>
 
     <div class="fixed-bottom player">
       <div class="row h-100">
-        <div class="col-3 my-auto">
-        </div>
+        <div class="col-3 my-auto"></div>
         <div class="col-9 my-auto player-div">
           <div class="row my-2 justify-content-center h-100">
             <div class="col-1 my-auto">
-              <div id="current-time" class="time">
-              </div>
+              <div id="current-time" class="time"></div>
             </div>
             <div class="col-10 my-auto">
               <input type="range" min='0' name="seekbar" id="seekbar" step="1"/
@@ -218,11 +200,7 @@
     <script src="https://kit.fontawesome.com/d7dc8983c1.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/jquery.mousewheel.min.js' %}"></script>
-    <script src="{% static 'js/home.js' %}"></script>
     <script src="{% static 'js/player.js' %}"></script>
     <script src="{% static 'js/search.js' %}"></script>
-    <script src="{% static 'js/card_click.js' %}"></script>
   </body>
 </html>
