--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -33,7 +33,7 @@
             id="logo"
           />
         </div>
-        <div class="row" id='home-row'>
+        <div class="row" id="home-row">
           <h3 id="home">Home</h3>
         </div>
         <div class="row">
@@ -52,7 +52,7 @@
       <div class="col-9 offset-3 ">
         <div class="row">
           <div class="col-12 search-bar px-0">
-            <form action="" method="POST" class="form-group" id='search'>
+            <form action="" method="POST" class="form-group" id="search">
               {% csrf_token %}
               <div class="input-group">
                 <div class="input-group-addon">
@@ -63,7 +63,7 @@
                   name="phrase"
                   placeholder="Search for Songs, Artists or Albums"
                   class="pt-3 search_input"
-                  id = "search_input"
+                  id="search_input"
                 />
               </div>
             </form>
@@ -123,9 +123,9 @@
                     />
                   </div>
                   <p class="album_name">Best of Taylor Swift</p>
-                  <div class="art">
                 </div>
                 <div class="myxo_card">
+                  <div class="art">
                     <img
                       src="/static/assets/best_of_coldplay.jpg"
                       alt=""
@@ -143,13 +143,11 @@
 
     <div class="fixed-bottom player">
       <div class="row h-100">
-        <div class="col-3 my-auto">
-        </div>
+        <div class="col-3 my-auto"></div>
         <div class="col-9 my-auto player-div">
           <div class="row my-2 justify-content-center h-100">
             <div class="col-1 my-auto">
-              <div id="current-time" class="time">
-              </div>
+              <div id="current-time" class="time"></div>
             </div>
             <div class="col-10 my-auto">
               <input type="range" min='0' name="seekbar" id="seekbar" step="1"/
