--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -47,10 +47,13 @@
         <div class="row link-hover">Songs</div>
         <div class="row link-hover">Artists</div>
         <div class="row link-hover">Albums</div>
+        <div class="row link-hover" id='signout'>
+          <h5><i class="fas fa-sign-out-alt"></i> Sign Out</h5>
+        </div>
       </div>
 
       <div class="col-9 offset-3 ">
-        <div class="row">
+        <div class="row flex-nowrap">
           <div class="col-12 search-bar px-0">
             <form action="" method="POST" class="form-group" id="search">
               {% csrf_token %}
