--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -48,8 +48,38 @@
         <div class="row link-hover">Songs</div>
         <div class="row link-hover">Artists</div>
         <div class="row link-hover">Albums</div>
-        <div class="row link-hover" id='signout'>
+        <div class="row link-hover" id="signout">
           <h5><i class="fas fa-sign-out-alt"></i> Sign Out</h5>
+        </div>
+      </div>
+
+      <div class="modal fade" id="song_menu" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-sm" role="document">
+          <div class="modal-content">
+            <div class="modal-body m-headfoot">
+              <form action="" method="post" id="song_menu_form">
+                {% csrf_token %}
+                <p>
+                  <input type="checkbox" name="add_to_queue" id="to_queue" />
+                  Add to queue
+                </p>
+                <p>
+                  <input type="checkbox" name="add_to_fav" id="to_fav" />
+                  Add to favorites
+                </p>
+              </form>
+            </div>
+            <div class="modal-footer m-headfoot">
+              <button
+                type="button"
+                class="btn btn-light"
+                id="song_menu_done"
+                form="song_menu_form"
+              >
+                Done
+              </button>
+            </div>
+          </div>
         </div>
       </div>
 
