--- a/main/static/css/home.scss
+++ b/main/static/css/home.scss
@@ -61,7 +61,7 @@ img {
 }
 
 #signout {
-  margin-top: 7rem;
+  margin-top: 6.7rem;
 }
 
 #loop {
@@ -147,6 +147,10 @@ h2 {
     rgba(0, 41, 80, 0) 103.07%
   );
   cursor: pointer;
+}
+
+.lol {
+  background-color: red;
 }
 
 .art {
