--- a/main/static/css/album.css
+++ b/main/static/css/album.css
@@ -54,9 +54,8 @@
 .song {
   background: #fdfdfd;
   padding: 0.4rem 0.5rem;
-  border: 1px solid #f1f1f1;
-  -webkit-box-shadow: 1px 1px 5px rgba(97, 97, 97, 0.151);
-          box-shadow: 1px 1px 5px rgba(97, 97, 97, 0.151);
+  margin: 5px 0;
+  border: 1px solid white;
 }
 
 .song .play_button {
@@ -79,12 +78,27 @@
   text-transform: capitalize;
 }
 
+.song .artist_name_sub {
+  color: #414141;
+  font-weight: 400;
+  font-size: 0.9rem;
+  margin: 0.2rem 0;
+  text-transform: capitalize;
+}
+
 .song .song_menu {
   margin: 0.3rem 0 0 0;
   -o-object-fit: cover;
      object-fit: cover;
   height: 1rem;
   padding: 0 0.5rem;
+}
+
+.song:hover {
+  background: #fafafa;
+  border: 1.2px solid #e4e4e4;
+  -webkit-box-shadow: 1px 1px 5px rgba(97, 97, 97, 0.438);
+          box-shadow: 1px 1px 5px rgba(97, 97, 97, 0.438);
 }
 
 .m-headfoot {
