myxo top 10 added

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -111,19 +111,19 @@
               <div class="owl-carousel owl-theme" id="recently_added"></div>
               <h2 class="pb-3">Our Charts</h2>
               <div class="owl-carousel owl-theme" id="charts">
-                <div class="myxo_card">
+                <div class="myxo_card" id='top_hits'>
                   <div class="art">
                     <img src="/static/assets/top_10.png" alt="" srcset="" />
                   </div>
                   <p class="album_name">Myxo Top 10</p>
                 </div>
-                <div class="myxo_card">
+                <div class="myxo_card" id='rock_hits'>
                   <div class="art">
                     <img src="/static/assets/rock_hits.png" alt="" srcset="" />
                   </div>
                   <p class="album_name">Rock Hits</p>
                 </div>
-                <div class="myxo_card">
+                <div class="myxo_card" id='pop_hits'>
                   <div class="art">
                     <img src="/static/assets/pop_hits.png" alt="" srcset="" />
                   </div>
